fix(task-remove-date): correct vertical alignment
Related to CAM-6127

--- a/webapps/ui/tasklist/client/scripts/task/directives/cam-tasklist-task-meta.less
+++ b/webapps/ui/tasklist/client/scripts/task/directives/cam-tasklist-task-meta.less
@@ -35,6 +35,13 @@
     }
   }
 
+  a {
+    &.reset-due-date,
+    &.reset-follow-up-date {
+      vertical-align: top;
+    }
+  }
+
   .groups,
   .assignee {
     text-align: right;
